# hirestream-match

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  admin_api.py  app.py  app_gradio.py  auth.py  batch_test.py  database.py  deploy.bat  deploy.sh  main.py  match_engine.py  models.py  pricing_config.py  pyproject.toml  qwen_pdf_ocr.py  requirements.txt  rsync_exclude.txt  start.sh  stress_test.py  user_service.py  utils.py
.github/workflows/: deploy.yml  sync_to_hub.yml  uptime-monitor.yml
TalentAI/: .gitignore  DEPLOYMENT.md  README.md  VERIFICATION.md  compose.yml  deploy.ps1  deploy.sh  start.sh  test_api.sh
TalentAI/backend/: .env.example  Dockerfile  create_sample_data.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt
TalentAI/database/: init.sql
TalentAI/frontend/: Dockerfile  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  config.py  create_sample_data.py  database.py  deps.py  docker-compose.yml  main.py  migrate.sh  models.py  requirements.txt  schemas.py  test_dashscope_concurrency.py
backend/alembic/: env.py
backend/license/: __init__.py  machine_id.py  middleware.py  models.py  router.py  (+1 more)
backend/shared/intjtech-logging/: README.md  pyproject.toml
backend/shared/intjtech-logging/intjtech_logging/: __init__.py  config.py  context.py  middleware.py
database/: create_feedback_table.sql  init.sql
deploy/: .env.private.example  build_offline_package.sh  compose.frontend.yml  compose.private.yml  compose.staging.yml  compose.yml  init-db.sql  install.ps1  install.sh
docs/: FUSION_README.md  PUBLIC_BETA_SUPPORT.md  README.md  SECURITY-KEYS.md  database-migration.md  sso_issues_postmortem.md
frontend/: .dockerignore  Dockerfile  app.js  index.html  nginx.conf  nuxt.config.ts  package-lock.json  package.json
reports/: report.html
shared/: __init__.py  llm_client.py  log.py  qwen_pdf_ocr.py  token_calculator.py
tests/: config.py  conftest.py  profiles.json  pytest.ini  requirements.txt  run_fixed.sh  run_tests.py  test_01_health.py  test_02_auth.py  test_02_search.py  test_03_instant_match.py  test_04_candidates.py  test_05_history.py  test_06_stats.py  test_07_security.py  test_08_feedback.py  test_09_jd_match.py  test_10_license.py  test_10_search.py  test_11_ingest.py  test_12_candidate_management.py  test_13_billing.py  test_14_sso_config.py  test_15_sso_integration.py  test_16_edge_cases.py  test_17_data_isolation.py  test_99_backend_pressure.py  test_history.json  test_license_api.py  test_sso_integration.py
tools/: check_billing.sh  check_dashscope_balance.py  create_test_user.sql  fix_billing_tables.sql  generate_license.py  init_users_db.sql  migrate_users.sql  seed_test_data.py  seed_test_data.sql  update_pwd.sql
(+77 files in other folders)
